--- a/image-alpha.css
+++ b/image-alpha.css
@@ -1,7 +1,21 @@
-body {
-	background-color: #fff;
-	background-image: linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee), 
-	linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee);
-	background-size:12px 12px;
-	background-position:0 0, 6px 6px
+body.image-alpha-grid, img.image-alpha-grid {
+    background-color: #fff;
+    background-image: linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee),
+    linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee);
+    background-size: 12px 12px;
+    background-position: 0 0, 6px 6px
+}
+
+#colorPicker {
+    position: fixed;
+    top: 25px;
+    right: 25px;
+    padding: 20px;
+    background: white;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+#colorPicker.hidden {
+    display: none;
 }
